# box-liner

./: .coveragerc  .travis.yml  Dockerfile  LICENSE  README.md  TODO.md  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
boxliner/: __init__.py  config.py  config_schema.py  container.py  main.py  shell.py  util.py
boxliner/cmd/: __init__.py  init.py  validate.py
boxliner/cookiecutter/: cookiecutter.json
boxliner/cookiecutter/{{cookiecutter.project_name}}/: docker-compose.yml
boxliner/cookiecutter/{{cookiecutter.project_name}}/{{cookiecutter.test_directory}}/: test.rb  test.yml
boxliner/driver/: compose.py  docker.py
boxliner/validator/: inspec.py
doc/source/: conf.py  index.rst  testing.rst
test/: boxliner.yml  conftest.py  docker-compose.yml  example.yml  test-fail.yml  test_config.py  test_config_schema.py  test_container.py  test_util.py
test/client/: test_compose.py  test_docker.py
test/driver/: test_compose.py  test_docker.py
test/integration/: test_cli.bats
test/resources/: docker-compose.yml
test/validator/: test_inspec.py
