[metadata]
name = box-liner
summary = box-liner - Docker container validation.
description-file = README.md
author = John Dewey
author-email = john@dewey.ws
home-page = https://github.com/retr0h/box-liner
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: System :: Systems Administration
    Topic :: Utilities

[pbr]
skip_authors = True
skip_changelog = True
warnerrors = True

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    box-liner = boxliner.shell:main

[files]
packages =
    boxliner

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
